fix(workflows): repair yaml run steps

--- a/.github/workflows/performance-check.yml
+++ b/.github/workflows/performance-check.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Evaluate performance
         run: |
           ruby <<'RUBY'
+          require 'json'
           require_relative './scripts/performance/measure'
           require_relative './scripts/performance/evaluate'
           require_relative './scripts/performance/report'
