--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -21,4 +21,5 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: bundle exec ruby -r ./scripts/ai/code_reviewer_ai -e "AI::CodeReviewerAI.new.review(pull_request_number: ENV.fetch('PR_NUMBER').to_i)"
+        run: |
+          bundle exec ruby -r ./scripts/ai/code_reviewer_ai -e "AI::CodeReviewerAI.new.review(pull_request_number: ENV.fetch('PR_NUMBER').to_i)"
