--- a/.github/workflows/design-review.yml
+++ b/.github/workflows/design-review.yml
@@ -24,7 +24,8 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: bundle exec ruby -r ./scripts/ai/design_reviewer_ai -e "AI::DesignReviewerAI.new.review_issue(issue_number: ENV.fetch('ISSUE_NUMBER').to_i)"
+        run: |
+          bundle exec ruby -r ./scripts/ai/design_reviewer_ai -e "AI::DesignReviewerAI.new.review_issue(issue_number: ENV.fetch('ISSUE_NUMBER').to_i)"
 
   design-review-pr:
     if: github.event_name == 'pull_request'
@@ -43,4 +44,5 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: bundle exec ruby -r ./scripts/ai/design_reviewer_ai -e "AI::DesignReviewerAI.new.review(pull_request_number: ENV.fetch('PR_NUMBER').to_i)"
+        run: |
+          bundle exec ruby -r ./scripts/ai/design_reviewer_ai -e "AI::DesignReviewerAI.new.review(pull_request_number: ENV.fetch('PR_NUMBER').to_i)"
