--- a/.github/workflows/pdm-review.yml
+++ b/.github/workflows/pdm-review.yml
@@ -22,4 +22,5 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: bundle exec ruby -r ./scripts/ai/pdm_ai -e "AI::PdmAI.new.review(issue_number: ENV.fetch('ISSUE_NUMBER').to_i)"
+        run: |
+          bundle exec ruby -r ./scripts/ai/pdm_ai -e "AI::PdmAI.new.review(issue_number: ENV.fetch('ISSUE_NUMBER').to_i)"
