--- a/.github/workflows/update-specification.yml
+++ b/.github/workflows/update-specification.yml
@@ -24,7 +24,8 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: bundle exec ruby -r ./scripts/ai/documentation_ai -e "AI::DocumentationAI.new.update_specification(pull_request_number: ENV.fetch('PR_NUMBER').to_i)"
+        run: |
+          bundle exec ruby -r ./scripts/ai/documentation_ai -e "AI::DocumentationAI.new.update_specification(pull_request_number: ENV.fetch('PR_NUMBER').to_i)"
       - name: Commit updated spec
         run: |
           git config user.name 'spec-bot'
