--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,8 +1,12 @@
 name: Code Review
 
 on:
-  pull_request:
-    types: [opened, synchronize]
+  workflow_dispatch:
+    inputs:
+      pr_number:
+        description: 'Pull request number to review'
+        required: true
+        type: number
 
 jobs:
   review:
@@ -17,7 +21,7 @@ jobs:
         run: bundle install --with ai
       - name: Run code review
         env:
-          PR_NUMBER: ${{ github.event.number }}
+          PR_NUMBER: ${{ github.event.inputs.pr_number }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
