--- a/.github/workflows/customer-request.yml
+++ b/.github/workflows/customer-request.yml
@@ -1,9 +1,12 @@
 name: Customer Request Generator
 
 on:
-  schedule:
-    - cron: "0 0 * * 1" # Mondays 9:00 JST (~00:00 UTC)
   workflow_dispatch:
+    inputs:
+      run_reason:
+        description: 'Optional note describing why you are generating a customer request'
+        required: false
+        type: string
 
 jobs:
   generate:
@@ -21,4 +24,5 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          RUN_REASON: ${{ github.event.inputs.run_reason }}
         run: bundle exec ruby -r ./scripts/ai/customer_ai -e 'AI::CustomerAI.new.run'
