--- a/.github/workflows/pdm-review.yml
+++ b/.github/workflows/pdm-review.yml
@@ -1,12 +1,15 @@
 name: PdM Review
 
 on:
-  issues:
-    types: [labeled]
+  workflow_dispatch:
+    inputs:
+      issue_number:
+        description: 'Issue number containing requirements to review'
+        required: true
+        type: number
 
 jobs:
   review:
-    if: github.event.label.name == 'requirements-defined'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,7 +21,7 @@ jobs:
         run: bundle install --with ai
       - name: Run PdM review
         env:
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
+          ISSUE_NUMBER: ${{ github.event.inputs.issue_number }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
