ローカルで動作まで

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-/log/
-/tmp/
-/storage/
+src/log/
+src/tmp/
+src/storage/
 /vendor/bundle/
 /node_modules/
 /.bundle/
-/db/*.sqlite3
-/db/*.sqlite3-journal
+src/db/*.sqlite3
+src/db/*.sqlite3-journal
+src/db/*
 /.env
 /.env.*
 /coverage/
 /spec/examples.txt
 /.DS_Store
+src/tmp/*
